feat: Vaadin 예제 소스 및 유틸 함수 추가
이제부터 개발할 페이지의 컨벤션을 맞추면 좋을 것 같다.
따라서 자주 사용할 함수들을 미리 추가한다.

--- a/wolfdesk/src/main/resources/application.yaml
+++ b/wolfdesk/src/main/resources/application.yaml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: wolfdesk
+  datasource:
+    url: jdbc:h2:mem:${spring.application.name}
+    username: root
+  h2:
+    console:
+      enabled: true
 
   jpa:
     open-in-view: false
