--- a/wolfdesk/src/main/resources/application.yaml
+++ b/wolfdesk/src/main/resources/application.yaml
@@ -17,3 +17,7 @@ spring:
       hibernate:
         format_sql: true
         highlight_sql: true
+
+jwt:
+  secret-key: ${SECRET_KEY}
+  expired-duration: 5m
