JWT 인증 기능 구현 (#18)
* feat: 로그인, 회원가입 view, 버튼 생성

* gradle: security, jwt 의존성 추가

* yml: jwt 추가

* feat: jwt 필터 구현

* test: jwtProvider 단위 테스트

* 불필요한 클래스 삭제

* refactor: JwtProvider
, JwtProviderTest 리팩토링

* 주석 제거

* refactor: kotest로 변경 및 예외 분리

* feat: jwtFilter 구현

* build: mockk 의존성 추가

* refactor: JwtFilter permitAll Api 검증 로직 추가

* test: JwtFilter 테스트 코드 작성

* test: JwtFilter 테스트 코드 정상 작동한 Case 추가

* refactor: HttpServletRequest -> MockHttpServletRequest 변경

* refactor: securityConfig comment 반영

- 불필요한 코드 삭제
- companion object 컨벤션에 따라 클래스 맨 아래로 배치

* refactor: JwtFilter comment 반영

- 커스텀 인증 객체 구현
- shouldNotFilter 오버라이드

* refactor: comment 반영2

- 커스텀 principal 구현
- shouldNotFilter 오버라이드 하고 불필요하게 사용한 부분 제거
- 용어 수정
- AuthenticationEntryPoint 및 인증 실패 커스텀 예외 구현
- 전반적으로 확인 후 불필요한 코드 제거

* refactor: comment 반영2

- 불필요한 개행제거 및 코드 수정

* refactor: 토큰 생성 시 member 정보를 객체로 받도록 변경 및 이에 따른 테스트코드 수정 + securityConfig 의존성 주입 잘못받고있던 부분 수정

* feat: member 로그인, 회원가입 기능 구현

* refactor: jwt 관련 리팩토링

* feat: ApiResponse 규격에 error 추가

* refactor: 시큐리티 리팩토링

* feat: 엔티티 스캔에 멤버 도메인 추가

* refactor: api 수정

* config: secretKet default 값추가

* refactor: JWT 의존성 base 모듈로 이동

---------

Co-authored-by: nooose <hd15807@gmail.com>

--- a/wolfdesk/src/main/resources/application.yaml
+++ b/wolfdesk/src/main/resources/application.yaml
@@ -20,3 +20,7 @@ spring:
       hibernate:
         format_sql: true
         highlight_sql: true
+
+jwt:
+  secret-key: ${SECRET_KEY:s3cr3tK3y!Th1sIsARandomStringWith64CharactersIncludingSecretKey3}
+  expired: 5m
